test/Fail/RecordWhere1.agda
record Empty : Set where

module M where

foo : Empty
foo = record where
  open M
